crates/rattler_solve/tests/backends/snapshots/backends__resolvo__exclude_newer_error.snap
---
source: crates/rattler_solve/tests/backends/main.rs
expression: result.unwrap_err()
---
The following packages are incompatible
└─ foo >=4 cannot be installed because there are no viable options:
   └─ foo 4.0.2 is excluded because the package is uploaded after the cutoff date of 2021-12-12 12:12:12
