crates/rattler_solve/tests/backends/snapshots/backends__resolvo__solve_locked.snap
---
source: crates/rattler_solve/tests/backends/main.rs
expression: result.unwrap_err()
---
The following packages are incompatible
└─ bors >=2 can be installed with any of the following options:
   └─ bors 2.0 | 2.1
└─ bors 1.0 is locked, but another version is required as reported above
